<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia</string>
    <string name="avatar">Avatar</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="more">More Action</string>
    <string name="remove">Remove</string>
    <string name="write_something">Write something…</string>
    <string name="send_post">Send Post</string>
    <string name="edit">Edit</string>
    <string name="edit_message">Edit Message</string>
    <string name="empty_content">Content can\'t be empty</string>
    <string name="save">Save</string>
    <string name="add_new_post">Add New Post</string>
    <string name="watch">Watch</string>
    <string name="youtube_watch">Youtube watch</string>
    <string name="play">Play</string>
    <string name="google_api_unavailable">Google Api unavailable</string>
    <string name="channel_remote_name">Netology Channel</string>
    <string name="channel_remote_description">Notification</string>
    <string name="notification_user_liked">%1$s liked post by %2$s</string>
    <string name="notification_user_posted">%1$s send new post</string>
    <string name="notification_update">Please update app for new version to will receive new notification</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="picture_attachment">Picture Attachment</string>
    <string name="error_connection">Error connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="new_posts">New Posts</string>
    <string name="posts_list">Posts List</string>
    <string name="posts_detail">Post Detail</string>
    <string name="posts_edit">Edit Post</string>
    <string name="scroll_to_position">Edit Post</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="delete">Delete</string>
    <string name="error_login">Field login can\'t be empty</string>
    <string name="error_password">Field password can\'t be empty</string>
    <string name="error_name">Field name can\'t be empty</string>
    <string name="error_password_mismatch">Passwords mismatch</string>
    <string name="cancel">Cancel</string>
    <string name="error_like_post">We need to be auth if you want to like this post</string>
    <string name="error_add_post">You need be auth if you want to add new post</string>
    <string name="confirm_logout">You really want to logout</string>
    <string name="confirm">Confirm</string>
    <string name="notification" translatable="false">%1$d %2$s</string>
</resources>