<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/content_min_margin"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/card_padding">

       <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/avatar_ratio"
            android:layout_height="@dimen/avatar_ratio"
            android:layout_margin="@dimen/content_min_margin"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toTopOf="@id/title_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_netology" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_max_margin"
            android:layout_marginEnd="@dimen/content_max_margin"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/default_text_color"
            app:layout_constraintBottom_toTopOf="@id/tv_date"
            app:layout_constraintEnd_toStartOf="@id/iv_more"
            app:layout_constraintStart_toEndOf="@id/iv_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/post.json/data/author" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_max_margin"
            android:textColor="@color/default_text_color"
            app:layout_constraintBottom_toBottomOf="@id/title_border"
            app:layout_constraintStart_toEndOf="@id/iv_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@sample/post.json/data/published" />

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_min_margin"
            android:contentDescription="@string/more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more_vert_24" />

         <View
            android:id="@+id/title_border"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_min_margin"
            android:background="@color/default_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="@dimen/height_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon" />

        <TextView
            android:id="@+id/tv_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_min_margin"
            android:padding="@dimen/layout_padding"
            android:textColor="@color/default_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_border"
            tools:text="@sample/post.json/data/content"
            android:autoLink="web" />

        <ImageView
            android:id="@+id/iv_attachment_picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_video_view"
            android:contentDescription="@string/picture_attachment"
            android:visibility="gone"
            android:scaleType="centerInside"
            app:layout_constraintTop_toBottomOf="@id/tv_post"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/content_min_margin"
            tools:src="@drawable/youtube"
            tools:visibility="visible" />

        <View
            android:id="@+id/main_border"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_min_margin"
            android:background="@color/default_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="@dimen/height_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_attachment_picture" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_like"
            style="@style/LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_max_margin"
            android:contentDescription="@string/like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_border"
            android:button="@drawable/ic_like_checked"
            tools:text="10"
            android:paddingLeft="@dimen/checkbox_padding"
            android:paddingRight="@dimen/checkbox_padding" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/share"
            app:layout_constraintBottom_toBottomOf="@id/cb_like"
            app:layout_constraintStart_toEndOf="@id/cb_like"
            app:layout_constraintTop_toTopOf="@id/cb_like"
            app:icon="@drawable/ic_share_24"
            style="@style/ShareButton" />

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_error_post"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="@id/button_share"
            app:layout_constraintBottom_toBottomOf="@id/button_share"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>